--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 Zubair Rahma Anugrah <br><br>
                 1915016057 <br><br>
                 087889545077 <br><br>
-                <a href="https://zaeger.github.io/zubair_praktikumweb.github.io/">Posttest 1 Web</a>
+                <a href="https://zaeger.github.io/">Posttest 1 Web</a>
             </td>
         </tr>
 
